packages/dartcv/src/core/mat.h

CvStatus* cv_Mat_release(Mat self);
CvStatus* cv_Mat_region(Mat self, CvRect r, Mat* rval, CvCallback_0 callback);
CvStatus* cv_Mat_patchNaNs(Mat self, double val, CvCallback_0 callback);
uchar* cv_Mat_ptr_uchar_1(Mat self, int i);
uchar* cv_Mat_ptr_uchar_2(Mat self, int i, int j);
uchar* cv_Mat_ptr_uchar_3(Mat self, int i, int j, int k);
CvStatus* cv_Mat_op_sub_mat(Mat self, Mat val);
CvStatus* cv_Mat_op_mul_mat(Mat self, Mat val);
CvStatus* cv_Mat_op_div_mat(Mat self, Mat val);
CvStatus* cv_Mat_op_sub_u8(Mat self, uint8_t val);
CvStatus* cv_Mat_op_mul_u8(Mat self, uint8_t val);
CvStatus* cv_Mat_op_div_u8(Mat self, uint8_t val);
CvStatus* cv_Mat_op_sub_i8(Mat self, int8_t val);
CvStatus* cv_Mat_op_mul_i8(Mat self, int8_t val);
CvStatus* cv_Mat_op_div_i8(Mat self, int8_t val);
CvStatus* cv_Mat_op_sub_i16(Mat self, int16_t val);
CvStatus* cv_Mat_op_mul_i16(Mat self, int16_t val);
CvStatus* cv_Mat_op_div_i16(Mat self, int16_t val);
CvStatus* cv_Mat_op_sub_u16(Mat self, uint16_t val);
CvStatus* cv_Mat_op_mul_u16(Mat self, uint16_t val);
CvStatus* cv_Mat_op_div_u16(Mat self, uint16_t val);
CvStatus* cv_Mat_op_sub_i32(Mat self, int32_t val);
CvStatus* cv_Mat_op_mul_i32(Mat self, int32_t val);
CvStatus* cv_Mat_op_div_i32(Mat self, int32_t val);
CvStatus* cv_Mat_op_sub_f32(Mat self, float_t val);
CvStatus* cv_Mat_op_mul_f32(Mat self, float_t val);
CvStatus* cv_Mat_op_sub_f64(Mat self, double_t val);
CvStatus* cv_Mat_op_mul_f64(Mat self, double_t val);