packages/dartcv/lib/src/g/core.g.dart


  late final _cv_Mat_op_div_i16Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int16)>>(
      'cv_Mat_op_div_i16');
  late final _cv_Mat_op_div_i16 = _cv_Mat_op_div_i16Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_div_i32(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_div_i32(
      self,
      val,
    );
  }

  late final _cv_Mat_op_div_i32Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int32)>>(
      'cv_Mat_op_div_i32');
  late final _cv_Mat_op_div_i32 = _cv_Mat_op_div_i32Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_div_i8(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_div_i8(
      self,
      val,
    );
  }

  late final _cv_Mat_op_div_i8Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int8)>>(
      'cv_Mat_op_div_i8');
  late final _cv_Mat_op_div_i8 = _cv_Mat_op_div_i8Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_div_mat(
    Mat self,
    Mat val,
  ) {
    return _cv_Mat_op_div_mat(
      self,
      val,
    );
  }

  late final _cv_Mat_op_div_matPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>>(
          'cv_Mat_op_div_mat');
  late final _cv_Mat_op_div_mat = _cv_Mat_op_div_matPtr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>();

  ffi.Pointer<CvStatus> cv_Mat_op_div_u16(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_div_u16(
      self,
      val,
    );
  }

  late final _cv_Mat_op_div_u16Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint16)>>(
      'cv_Mat_op_div_u16');
  late final _cv_Mat_op_div_u16 = _cv_Mat_op_div_u16Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_div_u8(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_div_u8(
      self,
      val,
    );
  }

  late final _cv_Mat_op_div_u8Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint8)>>(
      'cv_Mat_op_div_u8');
  late final _cv_Mat_op_div_u8 = _cv_Mat_op_div_u8Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_mul_f32(
    Mat self,
    double val,
  ) {
    return _cv_Mat_op_mul_f32(
      self,
      val,
    );
  }

  late final _cv_Mat_op_mul_f32Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, float_t)>>(
          'cv_Mat_op_mul_f32');
  late final _cv_Mat_op_mul_f32 = _cv_Mat_op_mul_f32Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, double)>();

  ffi.Pointer<CvStatus> cv_Mat_op_mul_f64(
    Mat self,
    double val,
  ) {
    return _cv_Mat_op_mul_f64(
      self,
      val,
    );
  }

  late final _cv_Mat_op_mul_f64Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, double_t)>>(
      'cv_Mat_op_mul_f64');
  late final _cv_Mat_op_mul_f64 = _cv_Mat_op_mul_f64Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, double)>();

  ffi.Pointer<CvStatus> cv_Mat_op_mul_i16(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_mul_i16(
      self,
      val,
    );
  }

  late final _cv_Mat_op_mul_i16Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int16)>>(
      'cv_Mat_op_mul_i16');
  late final _cv_Mat_op_mul_i16 = _cv_Mat_op_mul_i16Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_mul_i32(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_mul_i32(
      self,
      val,
    );
  }

  late final _cv_Mat_op_mul_i32Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int32)>>(
      'cv_Mat_op_mul_i32');
  late final _cv_Mat_op_mul_i32 = _cv_Mat_op_mul_i32Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_mul_i8(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_mul_i8(
      self,
      val,
    );
  }

  late final _cv_Mat_op_mul_i8Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int8)>>(
      'cv_Mat_op_mul_i8');
  late final _cv_Mat_op_mul_i8 = _cv_Mat_op_mul_i8Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_mul_mat(
    Mat self,
    Mat val,
  ) {
    return _cv_Mat_op_mul_mat(
      self,
      val,
    );
  }

  late final _cv_Mat_op_mul_matPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>>(
          'cv_Mat_op_mul_mat');
  late final _cv_Mat_op_mul_mat = _cv_Mat_op_mul_matPtr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>();

  ffi.Pointer<CvStatus> cv_Mat_op_mul_u16(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_mul_u16(
      self,
      val,
    );
  }

  late final _cv_Mat_op_mul_u16Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint16)>>(
      'cv_Mat_op_mul_u16');
  late final _cv_Mat_op_mul_u16 = _cv_Mat_op_mul_u16Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_mul_u8(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_mul_u8(
      self,
      val,
    );
  }

  late final _cv_Mat_op_mul_u8Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint8)>>(
      'cv_Mat_op_mul_u8');
  late final _cv_Mat_op_mul_u8 = _cv_Mat_op_mul_u8Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_sub_f32(
    Mat self,
    double val,
  ) {
    return _cv_Mat_op_sub_f32(
      self,
      val,
    );
  }

  late final _cv_Mat_op_sub_f32Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, float_t)>>(
          'cv_Mat_op_sub_f32');
  late final _cv_Mat_op_sub_f32 = _cv_Mat_op_sub_f32Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, double)>();

  ffi.Pointer<CvStatus> cv_Mat_op_sub_f64(
    Mat self,
    double val,
  ) {
    return _cv_Mat_op_sub_f64(
      self,
      val,
    );
  }

  late final _cv_Mat_op_sub_f64Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, double_t)>>(
      'cv_Mat_op_sub_f64');
  late final _cv_Mat_op_sub_f64 = _cv_Mat_op_sub_f64Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, double)>();

  ffi.Pointer<CvStatus> cv_Mat_op_sub_i16(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_sub_i16(
      self,
      val,
    );
  }

  late final _cv_Mat_op_sub_i16Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int16)>>(
      'cv_Mat_op_sub_i16');
  late final _cv_Mat_op_sub_i16 = _cv_Mat_op_sub_i16Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_sub_i32(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_sub_i32(
      self,
      val,
    );
  }

  late final _cv_Mat_op_sub_i32Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int32)>>(
      'cv_Mat_op_sub_i32');
  late final _cv_Mat_op_sub_i32 = _cv_Mat_op_sub_i32Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_sub_i8(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_sub_i8(
      self,
      val,
    );
  }

  late final _cv_Mat_op_sub_i8Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int8)>>(
      'cv_Mat_op_sub_i8');
  late final _cv_Mat_op_sub_i8 = _cv_Mat_op_sub_i8Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_sub_mat(
    Mat self,
    Mat val,
  ) {
    return _cv_Mat_op_sub_mat(
      self,
      val,
    );
  }

  late final _cv_Mat_op_sub_matPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>>(
          'cv_Mat_op_sub_mat');
  late final _cv_Mat_op_sub_mat = _cv_Mat_op_sub_matPtr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>();

  ffi.Pointer<CvStatus> cv_Mat_op_sub_u16(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_sub_u16(
      self,
      val,
    );
  }

  late final _cv_Mat_op_sub_u16Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint16)>>(
      'cv_Mat_op_sub_u16');
  late final _cv_Mat_op_sub_u16 = _cv_Mat_op_sub_u16Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_op_sub_u8(
    Mat self,
    int val,
  ) {
    return _cv_Mat_op_sub_u8(
      self,
      val,
    );
  }

  late final _cv_Mat_op_sub_u8Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint8)>>(
      'cv_Mat_op_sub_u8');
  late final _cv_Mat_op_sub_u8 = _cv_Mat_op_sub_u8Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> cv_Mat_patchNaNs(
    Mat self,
    double val,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_patchNaNs(
      self,
      val,
      callback,
    );
  }

  late final _cv_Mat_patchNaNsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Double, imp1.CvCallback_0)>>('cv_Mat_patchNaNs');
  late final _cv_Mat_patchNaNs = _cv_Mat_patchNaNsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, double, imp1.CvCallback_0)>();

  ffi.Pointer<imp1.uchar> cv_Mat_ptr_uchar_1(
    Mat self,
    int i,
  ) {
    return _cv_Mat_ptr_uchar_1(
      self,
      i,
    );
  }

  late final _cv_Mat_ptr_uchar_1Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<imp1.uchar> Function(Mat, ffi.Int)>>(
      'cv_Mat_ptr_uchar_1');
  late final _cv_Mat_ptr_uchar_1 = _cv_Mat_ptr_uchar_1Ptr
      .asFunction<ffi.Pointer<imp1.uchar> Function(Mat, int)>();

  ffi.Pointer<imp1.uchar> cv_Mat_ptr_uchar_2(
    Mat self,
    int i,
    int j,
  ) {
    return _cv_Mat_ptr_uchar_2(
      self,
      i,
      j,
    );
  }

  late final _cv_Mat_ptr_uchar_2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<imp1.uchar> Function(
              Mat, ffi.Int, ffi.Int)>>('cv_Mat_ptr_uchar_2');
  late final _cv_Mat_ptr_uchar_2 = _cv_Mat_ptr_uchar_2Ptr
      .asFunction<ffi.Pointer<imp1.uchar> Function(Mat, int, int)>();

  ffi.Pointer<imp1.uchar> cv_Mat_ptr_uchar_3(
    Mat self,
    int i,
    int j,
    int k,
  ) {
    return _cv_Mat_ptr_uchar_3(
      self,
      i,
      j,
      k,
    );
  }

  late final _cv_Mat_ptr_uchar_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<imp1.uchar> Function(
              Mat, ffi.Int, ffi.Int, ffi.Int)>>('cv_Mat_ptr_uchar_3');
  late final _cv_Mat_ptr_uchar_3 = _cv_Mat_ptr_uchar_3Ptr
      .asFunction<ffi.Pointer<imp1.uchar> Function(Mat, int, int, int)>();

  ffi.Pointer<CvStatus> cv_Mat_region(
    Mat self,
    CvRect r,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_region(
      self,
      r,
      rval,
      callback,
    );
  }

  late final _cv_Mat_regionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, CvRect, ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_Mat_region');
  late final _cv_Mat_region = _cv_Mat_regionPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, CvRect, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_release(
    Mat self,
  ) {
    return _cv_Mat_release(
      self,
    );
  }

  late final _cv_Mat_releasePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat)>>(
          'cv_Mat_release');
  late final _cv_Mat_release =
      _cv_Mat_releasePtr.asFunction<ffi.Pointer<CvStatus> Function(Mat)>();
